weird password not showing in sign in modal fix

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -364,6 +364,10 @@
 				width: 65%;
 			}
 
+			#user_password {
+				display: block !important;
+			}
+
 			.sign_in_btn {
 				width: 60%;
 				font-family: bebas_neue;
